# ZoteroSeek

./: .eslintrc.js  .gitignore  AGENTS.md  GIT_WORKFLOW.md  LICENSE  PROJECT_REQUIREMENTS.md  README.md  README_zh-CN.md  eslint.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  update.json  vitest.config.ts  zotero-plugin.config.ts
addon/: bootstrap.js  install.rdf  manifest.json
backend/: main.py  pyproject.toml
backend/agent/: __init__.py  graph.py  tools.py
backend/api/: chat.py  health.py  index.py  library.py  search.py  shared_deps.py  zotero.py
backend/config/: settings.py
backend/core/llm/: adapters.py  client.py  embeddings.py
backend/core/pipeline/: chunker.py  ingestion.py  interfaces.py  parser.py
backend/core/prompts/: registry.py
backend/core/rag/: chat_integration.py  retriever.py
backend/extractors/: base.py  mineru_extractor.py  pdf.py
backend/models/: chunk.py  document.py
backend/static/: index.html
backend/static/assets/: index-BQLJxJ0F.js  index-BRPsQUAE.js  index-BRVWKJDh.js  index-ByGSv3z_.css  index-CD6Stb7R.css  index-Ck3tXCFx.js  index-CljhmVMF.js  index-Cr502Avi.css  index-D7_c5Hfi.css  index-DeDJVanu.css  index-WKjPM2ka.js  index-Yj9u6ktw.css  index-b_wq3q1i.js  index-rFE8fnOD.js
backend/tests/: test_api.py  test_pipeline.py  test_tools.py
docs/: TEACHING.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
mcp_server/: __init__.py  __main__.py  claude_desktop_config.json  server.py
plugin/: bootstrap.js  chrome.manifest  manifest.json  prefs.js
src/: addon.ts  (+2 more)
(+97 files in other folders)
