[project]
name = "zoteroseek-backend"
version = "0.1.0"
description = "ZoteroSeek AI Research Assistant Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "chromadb>=0.4.22",
    "pymupdf>=1.23.0",
    "httpx>=0.25.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
